try to fix menu-icon scroll gap

--- a/src/style/menu-icons.css
+++ b/src/style/menu-icons.css
@@ -2,7 +2,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
     width: 60px;
     display: flex;
     flex-direction: column;
